src/components/navbar/navbar.css
nav{
    width: 100%;
    /* background: #333; */
    color: #fff;
    padding: 10px 5%;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    z-index: 10;
}
.logo{
    width: 120px;
    cursor: pointer;
}
nav ul li{
    display: inline-block;
    list-style: none;
    margin: 5px 20px;
    font-size: 16px;
    margin: 5px 10px; 
    font-size: 14px;
}
.dark-nav{
    background: #212ea0;
    transition: 0.5s;
}
.menu-icon{
    display: none;
}
nav ul li.btn {
    background: #fff;
    color: #212ea0;
    padding: 8px 20px; /* Padding kam karein taaki button chota lage */
    border-radius: 30px;
    cursor: pointer;
    font-size: 14px;
    white-space: nowrap; /* Text ko ek line mein rakhega */
    display: inline-flex; /* Sirf utni jagah lega jitni zaroorat hai */
    align-items: center;
    justify-content: center;
    margin-left: 10px;
}

nav ul li.btn:hover {
    background: #e2e2e2;
}
nav ul {
    display: flex;
    align-items: center;
    list-style: none;
    flex-wrap: nowrap; /* Button ko niche jane se rokega */
    gap: 10px; /* Items ke beech barabar jagah rakhega */
}

/* Responsive Styles */
@media (max-width: 1000px) {
   .logo{
        width: 120px;
    }
    nav ul li{
        margin: 10px 15px;
        font-size: 14px;
    }
}
@media (max-width: 1000px){
    nav{
        flex-direction: column;
        padding: 15px 0;
    }
    nav ul{
        position: fixed;
        top: 0;
        right: -200px; /* Shuru mein screen se bahar */
        bottom: 0;
        width: 200px;
        height: 100vh;
        background: #212ea0;
        display: flex;
        flex-direction: column; /* Items ko ek ke niche ek laane ke liye */
        padding-top: 70px;
        transition: 0.5s;
        z-index: -1;
    }
    nav ul.hide-mobile-menu{
        right: 0; /* Menu ko screen se bahar le jaata hai */
    }
    nav ul li{
        margin: 20px 30px; /* Menu items ke beech gap */
        display: block;
    }
    nav ul li.btn {
        margin-left: 30px;
        width: fit-content;
    }
    .menu-icon{
        display: block;
        width: 30px;
        cursor: pointer;
       position: absolute; 
      right: 20px;       
     top: 25px;        
     z-index: 10;        
    }
    .hide-mobile-menu{
        right: -200px;
    }
}

